syntax = "proto3";
option go_package = "github.com/twirapp/twir/libs/api/messages/admin_notifications";
package messages.admin_notifications;

message CreateNotificationRequest {
	string message = 1;
	optional string user_id = 2;
}

message Notification {
	string id = 1;
	string created_at = 2;
	string message = 3;
	optional string user_id = 4;
}

message GetNotificationsRequest {
	int32 page = 1;
	int32 per_page = 2;
	bool is_user = 3;
	string search = 4;
}

message GetNotificationsResponse {
	repeated Notification notifications = 1;
	int32 total = 2;
}

message DeleteNotificationRequest {
	string id = 1;
}

message UpdateNotificationRequest {
	string id = 1;
	string message = 2;
}
